Grammar/tests/unity/error/vector-erros.top
start () {

    vector1[] = 50;
    vector2[0][] = 35.7;
    print() = vector3[4];
    vector5{9};
    vector[i || j] = 5;
    vector[k<n] = 3;
    vector[!identificador] = true;

}